objects/IdMatrix_Phone_Verification_Response__c.object
<CustomObject>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Status__c</fullName>
        <label>Phone Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veda_IdMatrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda IdMatrix</label>
        <referenceTo>Veda_IdMatrix__c</referenceTo>
        <relationshipLabel>IdMatrix Phone Verification Response</relationshipLabel>
        <relationshipName>IdMatrix_Phone_Verification_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>IdMatrix Phone Verification Response</label>
    <nameField>
        <label>Phone Verification Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IdMatrix Phone Verification Response</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>